fix spacing issues in global menu

--- a/stylesheets/partials/features/_header-main-menu.scss
+++ b/stylesheets/partials/features/_header-main-menu.scss
@@ -107,12 +107,14 @@
 			button {
 				text-transform: uppercase;
 				font-family: TTRoundsCondensed-Bold;
-			}
-			ul {
-				float: right;
-				margin-right: 7em;
-				
+            }
+            
+            > ul {
+                float: right;
+                margin-right: 7em;
+            }
 
+			ul {
 				li {
 					background: transparent;
 					transition: background .50s ease;
@@ -123,7 +125,7 @@
 						background: $teal-dark;
 						.overview {
                             display: flex;
-                            min-width: 40%;
+                            min-width: 0;
                             width: 40%;
 						}
 						ul {
@@ -204,7 +206,7 @@
 					}
 					ul {
 						background-color: $teal-dark;
-						display: none;
+                        display: none;
 						li {
 							display: block;
 							a {
@@ -736,3 +738,16 @@
         padding: 10px 0;
     }
 }
+
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {  
+    /* IE10+ specific styles go here */  
+    .menu-wrapper .nav-and-search nav ul li ul {
+        max-width: 65%;
+    }
+
+    @media screen  and (max-width: $screen-md) {
+        .menu-wrapper .nav-and-search nav ul li ul {
+            max-width: 100%;
+        }
+    }
+ }
